Fix drop-target z-index.

--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -130,7 +130,7 @@ $zindex-resizable:       1000;
 $zindex-project:         1010;
 $zindex-item:            1020;
 $zindex-draggable:       1030;
-$zindex-drop-zone:       1040;
+$zindex-drop-target:     1040;
 $zindex-drag-layer:      1050;
 $zindex-window-controls: 1060;
 
