--- a/src/stylesheets/abstracts/placeholders/_drop-target.scss
+++ b/src/stylesheets/abstracts/placeholders/_drop-target.scss
@@ -11,5 +11,6 @@
     bottom: 0;
     left: 0;
     background: $drop-target-color;
+    z-index: $zindex-drop-target;
   }
 }
