--- a/src/stylesheets/components/_project.scss
+++ b/src/stylesheets/components/_project.scss
@@ -14,7 +14,7 @@
       right: 0;
       bottom: 0;
       left: 0;
-      z-index: $zindex-drop-zone;
+      z-index: $zindex-drop-target;
       background: $drop-target-color;
       mix-blend-mode: multiply;
     }
